--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==21:22:48=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==21:26:48=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1732.60</p>
+                <p id="net-worth">1733.60</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-339.50</p>
+                <p id="unrealized-pl-value">-338.50</p>
             </div>
         </div>
     </header>
@@ -111,28 +111,32 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">{{COLUMN1_TITLE}}</h2>
-            <p id="stocks-content-1d">{{stocks-content-1}}</p>
+            <h2 id="column1-title">MNQM24</h2>
+--
+BuyLimit: 17695.75
         </div>
         <div class="column">
-            <h2 id="column2-title">{{COLUMN2_TITLE}}</h2>
-            <p id="stocks-content-2d">{{stocks-content-2}}</p>
+            <h2 id="column2-title">MESM24</h2>
+--
+BuyLimit: 5067.75
         </div>
         <div class="column">
-            <h2 id="column3-title">{{COLUMN3_TITLE}}</h2>
-            <p id="stocks-content-3d">{{stocks-content-3}}</p>
+            <h2 id="column3-title">MNQM24</h2>
+--
+BuyLimit: 17695.75
         </div>
         <div class="column">
-            <h2 id="column4-title">{{COLUMN4_TITLE}}</h2>
-            <p id="stocks-content-4d">{{stocks-content-4}}</p>
+            <h2 id="column4-title">MESM24</h2>
+--
+BuyLimit: 5067.75
         </div>
         <div class="column">
-            <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
-            <p id="stocks-content-5d">{{stocks-content-5}}</p>
+            <h2 id="column5-title">M2KM24==P/L:-339.0</h2>
+
         </div>
         <div class="column">
-            <h2 id="column6-title">{{COLUMN6_TITLE}}</h2>
-            <p id="stocks-content-6d">{{stocks-content-6}}</p>
+            <h2 id="column6-title">MCLK24</h2>
+
         </div>
         <div class="column">
             <h2 id="column7-title">{{COLUMN7_TITLE}}</h2>
