--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==01:26:56=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==01:28:18=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
@@ -112,7 +112,7 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
-
+BuyLimit: 17724.0
         </div>
         <div class="column">
             <h2 id="column2-title">MESM24</h2>
