--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==09:50:03=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==09:52:07=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1720.10</p>
+                <p id="net-worth">1686.85</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">0.00</p>
+                <p id="realized-pl-value">-0.50</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-352.00</p>
+                <p id="unrealized-pl-value">-384.75</p>
             </div>
         </div>
     </header>
@@ -113,17 +113,18 @@
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
 BuyLimit: 17624.0
+-Closed Order-
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24</h2>
-BuyLimit: 5065.25
+            <h2 id="column2-title">MNQM24==P/L:9.0</h2>
+-Closed Order-
         </div>
         <div class="column">
-            <h2 id="column3-title">MESM24==P/L:-1.25</h2>
+            <h2 id="column3-title">MESM24==P/L:-17.5</h2>
 
         </div>
         <div class="column">
-            <h2 id="column4-title">M2KM24==P/L:-351.0</h2>
+            <h2 id="column4-title">M2KM24==P/L:-348.0</h2>
 
         </div>
         <div class="column">
