--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(3)Trades==09:55:57=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==09:57:57=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1743.60</p>
+                <p id="net-worth">1758.60</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">-9.00</p>
+                <p id="realized-pl-value">+15.50</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-319.50</p>
+                <p id="unrealized-pl-value">-329.00</p>
             </div>
         </div>
     </header>
@@ -111,28 +111,30 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MNQM24==P/L:18.5</h2>
+            <h2 id="column1-title">MNQM24</h2>
+BuyLimit: 17624.0
+SellLimit: 17607.5
+        </div>
+        <div class="column">
+            <h2 id="column2-title">MNQM24==P/L:0.0</h2>
+SellLimit: 17607.5
+        </div>
+        <div class="column">
+            <h2 id="column3-title">MESM24</h2>
+BuyLimit: 5065.25
 -Closed Order-
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:7.5</h2>
+            <h2 id="column4-title">MESM24==P/L:6.25</h2>
 -Closed Order-
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-333.0</h2>
+            <h2 id="column5-title">M2KM24==P/L:-328.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column4-title">MCLK24</h2>
+            <h2 id="column6-title">MCLK24</h2>
 
-        </div>
-        <div class="column">
-            <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
-            <p id="stocks-content-5d">{{stocks-content-5}}</p>
-        </div>
-        <div class="column">
-            <h2 id="column6-title">{{COLUMN6_TITLE}}</h2>
-            <p id="stocks-content-6d">{{stocks-content-6}}</p>
         </div>
         <div class="column">
             <h2 id="column7-title">{{COLUMN7_TITLE}}</h2>
