--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==09:57:57=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==10:00:04=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1758.60</p>
+                <p id="net-worth">1768.10</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">+15.50</p>
+                <p id="realized-pl-value">+22.50</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-329.00</p>
+                <p id="unrealized-pl-value">-326.50</p>
             </div>
         </div>
     </header>
@@ -113,11 +113,11 @@
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
 BuyLimit: 17624.0
-SellLimit: 17607.5
+BuyLimit: 5065.25
         </div>
         <div class="column">
-            <h2 id="column2-title">MNQM24==P/L:0.0</h2>
-SellLimit: 17607.5
+            <h2 id="column2-title">MNQM24==P/L:-2.0</h2>
+BuyLimit: 5065.25
         </div>
         <div class="column">
             <h2 id="column3-title">MESM24</h2>
@@ -129,7 +129,7 @@ BuyLimit: 5065.25
 -Closed Order-
         </div>
         <div class="column">
-            <h2 id="column5-title">M2KM24==P/L:-328.0</h2>
+            <h2 id="column5-title">M2KM24==P/L:-329.0</h2>
 
         </div>
         <div class="column">
