--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==10:00:04=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==10:02:09=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1768.10</p>
+                <p id="net-worth">1750.85</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">+22.50</p>
+                <p id="realized-pl-value">+22.25</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-326.50</p>
+                <p id="unrealized-pl-value">-343.50</p>
             </div>
         </div>
     </header>
@@ -111,30 +111,28 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MNQM24</h2>
-BuyLimit: 17624.0
+            <h2 id="column1-title">MNQM24==P/L:-5.5</h2>
 BuyLimit: 5065.25
         </div>
         <div class="column">
-            <h2 id="column2-title">MNQM24==P/L:-2.0</h2>
+            <h2 id="column2-title">MESM24</h2>
 BuyLimit: 5065.25
         </div>
         <div class="column">
-            <h2 id="column3-title">MESM24</h2>
-BuyLimit: 5065.25
--Closed Order-
-        </div>
-        <div class="column">
-            <h2 id="column4-title">MESM24==P/L:6.25</h2>
--Closed Order-
-        </div>
-        <div class="column">
-            <h2 id="column5-title">M2KM24==P/L:-329.0</h2>
+            <h2 id="column3-title">MESM24==P/L:-10.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column6-title">MCLK24</h2>
+            <h2 id="column4-title">M2KM24==P/L:-347.0</h2>
 
+        </div>
+        <div class="column">
+            <h2 id="column5-title">MCLK24</h2>
+
+        </div>
+        <div class="column">
+            <h2 id="column6-title">{{COLUMN6_TITLE}}</h2>
+            <p id="stocks-content-6d">{{stocks-content-6}}</p>
         </div>
         <div class="column">
             <h2 id="column7-title">{{COLUMN7_TITLE}}</h2>
