--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==10:09:36=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==10:11:35=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1854.85</p>
+                <p id="net-worth">1852.35</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">+54.25</p>
+                <p id="realized-pl-value">+102.75</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-271.50</p>
+                <p id="unrealized-pl-value">-322.50</p>
             </div>
         </div>
     </header>
@@ -111,15 +111,15 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MNQM24==P/L:47.0</h2>
--Closed Order-
+            <h2 id="column1-title">MNQM24</h2>
+BuyLimit: 17624.0
         </div>
         <div class="column">
             <h2 id="column2-title">MESM24</h2>
-BuyLimit: 5065.25
+
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-315.0</h2>
+            <h2 id="column3-title">M2KM24==P/L:-318.0</h2>
 
         </div>
         <div class="column">
