--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==10:21:46=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==10:23:26=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1882.35</p>
+                <p id="net-worth">1872.85</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-292.50</p>
+                <p id="unrealized-pl-value">-302.00</p>
             </div>
         </div>
     </header>
@@ -116,10 +116,10 @@ BuyLimit: 17624.0
         </div>
         <div class="column">
             <h2 id="column2-title">MESM24</h2>
-
+BuyLimit: 5065.25
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-304.0</h2>
+            <h2 id="column3-title">M2KM24==P/L:-301.0</h2>
 
         </div>
         <div class="column">
