--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==12:19:03=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==12:20:39=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1901.85</p>
+                <p id="net-worth">1906.85</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-273.00</p>
+                <p id="unrealized-pl-value">-268.00</p>
             </div>
         </div>
     </header>
@@ -116,15 +116,15 @@
         </div>
         <div class="column">
             <h2 id="column2-title">MESM24</h2>
-
+            <p id="stocks-content-2d">{{stocks-content-2}}</p>
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-273.0</h2>
-
+            <h2 id="column3-title">M2KM24==P/L:-273.5</h2>
+            <p id="stocks-content-3d">{{stocks-content-3}}</p>
         </div>
         <div class="column">
             <h2 id="column4-title">MCLK24</h2>
-
+            <p id="stocks-content-4d">{{stocks-content-4}}</p>
         </div>
         <div class="column">
             <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
