--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==13:31:50=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==13:33:43=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1837.35</p>
+                <p id="net-worth">1825.35</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">+96.75</p>
+                <p id="realized-pl-value">+95.75</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-334.00</p>
+                <p id="unrealized-pl-value">-342.50</p>
             </div>
         </div>
     </header>
@@ -117,14 +117,14 @@ BuyLimit: 5056.0
         <div class="column">
             <h2 id="column2-title">MESM24</h2>
 BuyLimit: 5056.0
--Closed Order-
+SellLimit: 5050.5
         </div>
         <div class="column">
-            <h2 id="column3-title">MESM24==P/L:1.25</h2>
--Closed Order-
+            <h2 id="column3-title">MESM24==P/L:0.0</h2>
+SellLimit: 5050.5
         </div>
         <div class="column">
-            <h2 id="column4-title">M2KM24==P/L:-342.5</h2>
+            <h2 id="column4-title">M2KM24==P/L:-344.0</h2>
 
         </div>
         <div class="column">
