--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==13:35:41=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==13:37:39=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1822.35</p>
+                <p id="net-worth">1819.35</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">+97.25</p>
+                <p id="realized-pl-value">+98.75</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-347.00</p>
+                <p id="unrealized-pl-value">-351.50</p>
             </div>
         </div>
     </header>
@@ -117,19 +117,18 @@ BuyLimit: 5056.0
         <div class="column">
             <h2 id="column2-title">MESM24</h2>
 BuyLimit: 5056.0
--Closed Order-
         </div>
         <div class="column">
-            <h2 id="column3-title">MESM24==P/L:3.75</h2>
--Closed Order-
-        </div>
-        <div class="column">
-            <h2 id="column4-title">M2KM24==P/L:-350.0</h2>
+            <h2 id="column3-title">M2KM24==P/L:-350.5</h2>
 
         </div>
         <div class="column">
-            <h2 id="column5-title">MCLK24</h2>
+            <h2 id="column4-title">MCLK24</h2>
 
+        </div>
+        <div class="column">
+            <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
+            <p id="stocks-content-5d">{{stocks-content-5}}</p>
         </div>
         <div class="column">
             <h2 id="column6-title">{{COLUMN6_TITLE}}</h2>
